# findmejobs

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SKILL.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_slice1_initial.py  0002_slice2_ops_and_delivery.py  0003_ph_board_observability.py  0004_application_submissions.py
config/: app.toml  profile.toml  profile.yaml  ranking.yaml  sources.yaml
reports/: PROFILE_VERIFICATION.md  profile_audit_after.md  profile_audit_before.md
scripts/: export_application_ui_data.py  export_apply_sessions_ui_data.py  export_job_details_ui_data.py  export_ui_data.sh  profile_audit_report.py
systemd/: findmejobs-digest.service  findmejobs-digest.timer  findmejobs-doctor.service  findmejobs-doctor.timer  findmejobs-ingest.service  findmejobs-ingest.timer  findmejobs-rank.service  findmejobs-rank.timer  findmejobs-review-export.service  findmejobs-review-export.timer  findmejobs-review-import.service  findmejobs-review-import.timer
tests/: conftest.py  test_applications.py  test_apply.py  test_cli.py  test_config.py  test_database.py  test_dedupe.py  test_end_to_end_slice1.py  test_export_job_details_ui_data.py  test_fetch_and_adapters.py  test_locking.py  test_logging.py  test_normalization.py  test_operator_surface.py  test_ph_board_adapters.py  test_profile_bootstrap.py  test_profile_bootstrap_cli.py  test_ranking.py  test_raw_storage.py  test_review_boundary.py  test_slice2_additional.py  test_slice2_ops.py
ui/: README.md  app.js  index.html  styles.css
(+174 files in other folders)
