[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "findmejobs"
version = "0.1.0"
description = "Single-host job intelligence pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2.0",
  "feedparser>=6.0,<7.0",
  "httpx>=0.27,<0.28",
  "lxml>=5.0,<6.0",
  "pypdf>=5.0,<6.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "python-docx>=1.1,<2.0",
  "rapidfuzz>=3.9,<4.0",
  "SQLAlchemy>=2.0,<3.0",
  "tenacity>=8.2,<9.0",
  "typer>=0.12,<1.0",
  "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[project.scripts]
findmejobs = "findmejobs.cli.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
